@@ -22,6 +22,12 @@ class Welcome extends Application {
 	{
 		$this->data['pagebody'] = 'justone';	// this is the view we want shown
 		$this->data = array_merge($this->data, (array) $this->quotes->last());
+		$this->caboose->needed('jrating', 'hollywood');
+		
+		$this->date['average']=
+		($this->data['vote_count'] > 0) ?
+				($this->data['vote_total'] / $this->data['vote_count']) : 0;
+		
 		$this->render();
 	}
 
