@@ -40,7 +40,12 @@ class Caboose {
             'js' => 'bootstrap-confirmation.js',
             'template' => 'confirm'
         ),
-     );
+		'jrating' => array(
+			'css' => 'jRating.jquery.css',
+			'js' => 'jRating.jquery.js',
+			'template' => 'jrating'
+			),
+		);
     // provide for any fields they need. this should be indexed [component][field]
     var $fields = array();
     // provide for any field validations needed
